Fix side margins on mobile on homepage

--- a/docs/assets/css/home.css
+++ b/docs/assets/css/home.css
@@ -149,7 +149,7 @@ article .sources .source img {
 /* Features */
 
 article .features {
-	margin: -10px;
+	margin: -10px 0;
 }
 
 article .features .feature {
